// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`League attribute population from local object parses data correctly 1`] = `
League {
  "allowsTrades": true,
  "divisions": Array [
    Object {
      "divisionId": 0,
      "name": "Division 1",
      "size": 4,
    },
    Object {
      "divisionId": 1,
      "name": "Division 2",
      "size": 4,
    },
  ],
  "draftOrder": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
  ],
  "finalRankings": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
  ],
  "firstMatchupId": 1,
  "firstWeekId": 1,
  "lastMatchupId": 15,
  "lastWeekId": 17,
  "leagueId": 336358,
  "name": "The Ocho",
  "numPlayoffTeams": 4,
  "numRegularSeasonMatchups": 13,
  "numTeams": 8,
  "playoffMatchupLength": 2,
  "playoffSeedOrder": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
  ],
  "playoffTiebreaker": "Total points for",
  "regularSeasonMatchupLength": 1,
  "regularSeasonTiebreaker": "None",
  "scoringDecimalPlaces": 2,
  "seasonId": "2017",
  "teams": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
  ],
  "tradeRevisionHours": 48,
}
`;

exports[`League attribute population from server response parses data correctly 1`] = `
League {
  "allowsTrades": true,
  "divisions": Array [
    Object {
      "divisionId": 0,
      "name": "Division 1",
      "size": 4,
    },
    Object {
      "divisionId": 1,
      "name": "Division 2",
      "size": 4,
    },
  ],
  "draftOrder": Array [
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
  ],
  "finalRankings": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
  ],
  "firstMatchupId": 1,
  "firstWeekId": 1,
  "lastMatchupId": 15,
  "lastWeekId": 17,
  "leagueId": 336358,
  "name": "The Ocho",
  "numPlayoffTeams": 4,
  "numRegularSeasonMatchups": 13,
  "numTeams": 8,
  "playoffMatchupLength": 2,
  "playoffSeedOrder": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
  ],
  "playoffTiebreaker": "Total points for",
  "regularSeasonMatchupLength": 1,
  "regularSeasonTiebreaker": "None",
  "scoringDecimalPlaces": 2,
  "seasonId": 2017,
  "teams": Array [
    Team {
      "abbreviation": "GOAT",
      "divisionStanding": 1,
      "firstName": "The Boston",
      "lastName": "TE Party",
      "leagueId": 336358,
      "leagueStanding": 1,
      "losses": 4,
      "pointsAgainst": 1131.4,
      "pointsFor": 1305.78,
      "seasonId": 2017,
      "teamId": 1,
      "ties": 0,
      "waiverRank": 6,
      "wins": 9,
    },
    Team {
      "abbreviation": "GRON",
      "divisionStanding": 4,
      "firstName": "Prestige",
      "lastName": "Worldwide",
      "leagueId": 336358,
      "leagueStanding": 8,
      "losses": 8,
      "pointsAgainst": 1232.94,
      "pointsFor": 1062.82,
      "seasonId": 2017,
      "teamId": 2,
      "ties": 0,
      "waiverRank": 5,
      "wins": 5,
    },
    Team {
      "abbreviation": "ARCH",
      "divisionStanding": 4,
      "firstName": "Archie",
      "lastName": "Cooper",
      "leagueId": 336358,
      "leagueStanding": 7,
      "losses": 8,
      "pointsAgainst": 1280,
      "pointsFor": 1155.34,
      "seasonId": 2017,
      "teamId": 3,
      "ties": 0,
      "waiverRank": 8,
      "wins": 5,
    },
    Team {
      "abbreviation": "REES",
      "divisionStanding": 3,
      "firstName": "Feed",
      "lastName": "Zeeeke ",
      "leagueId": 336358,
      "leagueStanding": 4,
      "losses": 6,
      "pointsAgainst": 1290.12,
      "pointsFor": 1297.26,
      "seasonId": 2017,
      "teamId": 4,
      "ties": 0,
      "waiverRank": 7,
      "wins": 7,
    },
    Team {
      "abbreviation": "fuck",
      "divisionStanding": 2,
      "firstName": "fuck fantasy ",
      "lastName": "football",
      "leagueId": 336358,
      "leagueStanding": 5,
      "losses": 7,
      "pointsAgainst": 1278.42,
      "pointsFor": 1233.26,
      "seasonId": 2017,
      "teamId": 5,
      "ties": 0,
      "waiverRank": 4,
      "wins": 6,
    },
    Team {
      "abbreviation": "BOIS",
      "divisionStanding": 3,
      "firstName": "Team",
      "lastName": "ASS",
      "leagueId": 336358,
      "leagueStanding": 6,
      "losses": 8,
      "pointsAgainst": 1240.04,
      "pointsFor": 1328.1,
      "seasonId": 2017,
      "teamId": 8,
      "ties": 0,
      "waiverRank": 1,
      "wins": 5,
    },
    Team {
      "abbreviation": "��",
      "divisionStanding": 2,
      "firstName": "2 Gurleys",
      "lastName": "One Cup",
      "leagueId": 336358,
      "leagueStanding": 3,
      "losses": 5,
      "pointsAgainst": 1186.94,
      "pointsFor": 1288.64,
      "seasonId": 2017,
      "teamId": 9,
      "ties": 0,
      "waiverRank": 2,
      "wins": 8,
    },
    Team {
      "abbreviation": "YOC",
      "divisionStanding": 1,
      "firstName": "FRICKIN",
      "lastName": "JOOOOOSH!",
      "leagueId": 336358,
      "leagueStanding": 2,
      "losses": 6,
      "pointsAgainst": 1250.94,
      "pointsFor": 1219.6,
      "seasonId": 2017,
      "teamId": 12,
      "ties": 0,
      "waiverRank": 3,
      "wins": 7,
    },
  ],
  "tradeRevisionHours": 48,
}
`;
